--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,6 @@ p {
   background-color: var(--color-blue);
   transition: all var(--animation-duration) ease;
   transform: scale(1.1);
-  
 }
 
 .navbar__menu button:hover i {
@@ -297,4 +296,8 @@ p {
   padding: 10px;
   font-weight: var(--weight-regular);
   font-size: var(--font-regular);
+}
+
+@media {
+  
 }
