--- a/css/style.css
+++ b/css/style.css
@@ -1,303 +1,296 @@
 /* Global */
 :root {
-  /* Color */
-  --color-white: #fefefe;
-  --color-dark-white: #e7e6e1;
-  --color-light-white: #f7f6e7;
-  --color-yellow: #fcd134;
-  --color-dark-yellow: #ffff6a;
-  --color-light-yellow: #ffff8d;
-  --color-gray: #939597;
-  --color-dark-gray: #616161;
-  --color-ornage: #f2a154;
-  --color-red: #e84545;
-  --color-blue: #00589b;
-  --color-navy: #2b2e4a;
-  --color-black: #000000;
-  --color-green: #7eaf34;
-  --color-light-green: #68b68e;
-  --color-dark-green: #008003;
-  --color-brown: #a3623b;
-  --color-purple: #c45eff;
-  --color-pink: #e79a8b;
+	/* Color */
+	--color-white: #fefefe;
+	--color-dark-white: #e7e6e1;
+	--color-light-white: #f7f6e7;
+	--color-yellow: #fcd134;
+	--color-dark-yellow: #ffff6a;
+	--color-light-yellow: #ffff8d;
+	--color-gray: #939597;
+	--color-dark-gray: #616161;
+	--color-ornage: #f2a154;
+	--color-red: #e84545;
+	--color-blue: #00589b;
+	--color-navy: #2b2e4a;
+	--color-black: #000000;
+	--color-green: #7eaf34;
+	--color-light-green: #68b68e;
+	--color-dark-green: #008003;
+	--color-brown: #a3623b;
+	--color-purple: #c45eff;
+	--color-pink: #e79a8b;
 
-  /* Font size */
-  --font-large: 48px;
-  --font-medium: 24px;
-  --font-regular: 20px;
-  --font-small: 16px;
-  --font-micro: 14px;
+	/* Font size */
+	--font-large: 48px;
+	--font-medium: 24px;
+	--font-regular: 20px;
+	--font-small: 16px;
+	--font-micro: 14px;
 
-  /* Font weight */
-  --weight-bold: 700;
-  --weight-semi-bold: 600;
-  --weight-regular: 400;
+	/* Font weight */
+	--weight-bold: 700;
+	--weight-semi-bold: 600;
+	--weight-regular: 400;
 
-  
-  /* Size */
-  --size-border-radius: 4px;
+	/* Size */
+	--size-border-radius: 4px;
 
-  /* Animation */
-  --animation-duration: 200ms;
-}
-@font-face {
-  src: url("Krungthep.ttf");
-  font-family: 'kung';
+	/* Animation */
+	--animation-duration: 200ms;
 }
 
 html {
-  width: 100%;
-  padding: 80px;
+	width: 100%;
+	padding: 60px;
+	padding-bottom: 0;
 }
 
 body {
-  background: url("../img/home-background.png") center/cover no-repeat;
-  font-family: "kung", monospace;
-  margin: 0;
-  margin-left: auto;
-  margin-right: auto;
-  cursor: default;
-  font-family: 'kung';
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	font-family: "Inconsolata", monospace;
+	background: url("../img/home-background.png") center/cover no-repeat;
+	font-family: "kung", monospace;
+	margin: 0;
+	margin-left: auto;
+	margin-right: auto;
+	cursor: default;
+	font-family: "kung";
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 a {
-  text-decoration: none;
-  color: var(--color-red);
+	text-decoration: none;
+	color: var(--color-red);
 }
 
 ul {
-  list-style: none;
-  padding-left: 0;
+	list-style: none;
+	padding-left: 0;
 }
 
 li {
-  list-style: none;
+	list-style: none;
 }
 
 button {
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  outline: none;
+	background-color: transparent;
+	cursor: pointer;
+	border: none;
+	outline: none;
 }
 
 /* Universal tags */
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 /* Typography */
 h1 {
-  font-size: var(--font-large);
-  margin: 15px 0;
-  color: var(--color-blue);
+	font-size: var(--font-large);
+	margin: 15px 0;
+	color: var(--color-blue);
 }
 
 h2 {
-  font-size: var(--font-medium);
-  font-weight: var(--weight-semi-bold);
-  margin: 10px 0;
-  color: var(--color-dark-green);
+	font-size: var(--font-medium);
+	font-weight: var(--weight-semi-bold);
+	margin: 10px 0;
+	color: var(--color-dark-green);
 }
 
 h3 {
-  font-size: var(--font-regular);
-  font-weight: var(--weight-regular);
-  margin: 8px 0;
+	font-size: var(--font-regular);
+	font-weight: var(--weight-regular);
+	margin: 8px 0;
 }
 
 p {
-  font-size: var(--font-regular);
-  font-weight: var(--weight-regular);
-  margin: 4px 0;
-  color: var(--color-black);
+	font-size: var(--font-regular);
+	font-weight: var(--weight-regular);
+	margin: 4px 0;
+	color: var(--color-black);
 }
 
 /* Header */
 #header {
-  margin: 0;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  height: auto;
-  position: relative;
-  max-width: 80%;
-  height: auto;
+	padding: 0;
+	width: 85%;
 }
 
-#header .section__container {
-  display: flex;
-  justify-content: center;
-  margin: 0;
-  max-width: 100%;
-  width: 715px;
-  height: auto;
+.header__container {
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: relative;
 }
-
-.header__title {
-  max-width: 90%;
-  height: auto;
-  margin: 0;
-  }
 
 .header__logo {
-  max-width: 25%;
-  width: 130px;
-  height: auto;
-  margin: 0;
-  position: relative;
-  top: -10px;
+	width: 15%;
+	position: relative;
+	left: 10px;
 }
 
+.header__logo img {
+	width: 120%;
+}
+
+.header__logo img:hover {
+  -webkit-animation: rotation 0.5s  linear;
+}
+	@-webkit-keyframes rotation {
+		from {
+			-webkit-transform: rotate(0deg);
+		}
+		to {
+			-webkit-transform: rotate(360deg);
+		}
+	}
+
+
+.header__title {
+	width: 85%;
+}
+
+/* Navbar */
 #navbar {
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0;
-  max-width: 70%;
-  width: 900px;
-}
-
-#navbar .section__container {
-  margin-right: 0px;
-  padding: 0px;
-  max-width: 100%;
+	margin: 0 auto;
+	padding: 0;
+	width: 85%;
 }
 
 .navbar__menu {
-  display: flex;
-  justify-content: flex-end;
-  margin-bottom: 30px;
-}
-
-.menu {
-  margin-left: 16px;
+	display: flex;
+	justify-content: flex-end;
+	padding-right: 10px;
+	margin-bottom: 20px;
 }
 
 .navbar__menu button {
-  background-color: var(--color-light-white);
-  max-width: 100%;
-  height: auto;
-  padding: 10px;
-  font-size: var(--font-regular);
-  border-radius: 5px;
-  border: solid 1px var(--color-dark-green);
-  box-shadow: 2px 2px var(--color-gray);
+	background-color: var(--color-light-white);
+	margin-left: 16px;
+	padding: 8px;
+	font-size: 1.5vmax;
+	border-radius: 5px;
+	border: solid 1px var(--color-dark-green);
+	box-shadow: 2px 2px var(--color-gray);
 }
 
 .navbar__menu button:hover {
-  color: var(--color-white);
-  background-color: var(--color-blue);
-  transition: all var(--animation-duration) ease;
-  transform: scale(1.1);
+	color: var(--color-white);
+	background-color: var(--color-blue);
+	transition: all var(--animation-duration) ease;
+	transform: scale(1.1);
 }
 
 .navbar__menu button:hover i {
-  color: var(--color-yellow);
-  transform: rotate(-20deg);
+	color: var(--color-yellow);
+	transform: rotate(-20deg);
 }
 
 .navbar__menu i {
-  padding-right: 8px;
+	padding-right: 8px;
 }
 
 /* Chatbox */
 #chatbox {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  max-width: 1000px;
-  min-width: 900px;
-  height: 50%;
+	margin: 0 auto;
+	padding: 0;
+	width: 85%;
+	height: 55%;
+}
+
+.chat__top {
+	background-color: skyblue;
+	width: 100%;
+	height: 10%;
+	display: flex;
+	padding: 0px 5px;
+	align-items: center;
+	box-shadow: 10px 10px 6px -6px #777;
+	border: solid 1px var(--color-black);
+}
+
+.chat__top i {
+	margin: 0 5px;
 }
 
 .chat__container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin: 0;
-  background-color: #fefefe;
-  box-shadow: 10px 10px 6px -6px #777;
-  border: solid 1px var(--color-black);
-  overflow-y: scroll;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 90%;
+	margin: 0;
+	padding: 10px;
+	background-color: #fefefe;
+	box-shadow: 10px 10px 6px -6px #777;
+	border: solid 1px var(--color-black);
+	overflow-y: scroll;
 }
 
 .chat {
-  display: flex;
-  margin: 20px 30px;
-  max-width: 100%;
+	display: flex;
+	margin: 10px;
+	width: 100%;
 }
 
 .chat__avatar {
-  max-width: 20%;
-  width: 100px;
-  height: auto;
-  border-radius: 50%;
-  margin: 0 20px;
+	width: 20%;
+	max-width: 100px;
+	border-radius: 50%;
+	margin: 0 20px;
 }
 
 .chat__speechbubble {
-  max-width: 50%;
-  background-color: var(--color-gray);
-  padding: 20px;
-  border-radius: 20px;  
-  display: inline-block;
-  flex-wrap: wrap;
-  max-width: 60%;
-  height: auto;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 50%;
+	height: auto;
+	background-color: var(--color-gray);
+	padding: 10px;
+	border-radius: 25px;
 }
 
 .chat:nth-child(even) {
-  flex-direction: row-reverse;
-}
-
-.first-chat {
-  margin-top: 40px;
-}
-
-.last-chat {
-  margin-bottom: 40px;
+	flex-direction: row-reverse;
 }
 
 .chat__text {
-  display: inline;
-  font-size: var(--font-regular);
-  max-width: 70%;
+	display: inline;
+	font-size: calc(10px + 1vw);
 }
 
 .chat__speechbubble i {
-  color: var(--color-yellow);
-  font-size: var(--font-regular);
+	color: var(--color-yellow);
+	font-size: calc(10px + 1vw);
+	margin-left: 5px;
 }
 
 .chat__speechbubble i:hover {
-  color: var(--color-dark-white);
-  font-size: var(--font-regular);
-  cursor: pointer;
-  transform: rotate(-20deg);
+	color: var(--color-dark-white);
+	font-size: var(--font-regular);
+	cursor: pointer;
+	transform: scale(1.1);
 }
 
 /* Footer */
 #footer {
-  max-width: 70%;
-  height: auto;
-  margin: auto;
-  text-align: center;
-  border-top: solid 1px var(--color-black);
-  margin-top: 40px;
-  padding: 10px;
-  font-weight: var(--weight-regular);
-  font-size: var(--font-regular);
+	text-align: center;
+	width: 75%;
+	border-top: solid 1px var(--color-black);
+	padding: 10px;
+	margin-top: 40px;
+  margin-bottom: 10px;
+}
+
+.footer__text {
+	font-size: calc(8px + 1vw);
 }
 
 @media {
-  
 }
